jiber-server/examples/ha-kube-deployment/kube/jiber-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jiber
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: jiber
