jiber-server/examples/ha-kube-deployment/kube/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jiber
spec:
  selector:
    app: jiber
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
